new design but still a bug on the theme's spinner

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+    android:id="@+id/canvasGame"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="horizontal" >
 
-    <com.morphoss.xo.memorize.GameCanvas 
+    <com.morphoss.xo.memorize.GameCanvas
         android:id="@+id/game_canvas"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
+        android:layout_height="match_parent" >
     </com.morphoss.xo.memorize.GameCanvas>
 
 </LinearLayout>
-
