--- a/res/layout/addition_layout.xml
+++ b/res/layout/addition_layout.xml
@@ -9,7 +9,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_weight="0.5"
-        android:background="@color/light_grey"
+        android:background="#b4d4ad"
         android:orientation="horizontal" >
 
         <TextView
@@ -19,7 +19,7 @@
             android:layout_marginLeft="30dp"
             android:layout_marginTop="30dp"
             android:text="@string/preview"
-            android:textColor="@color/olpc_text_grey_color"
+            android:textColor="#07565b"
             android:textSize="20sp" />
 
         <com.morphoss.xo.memorize.ObjView
@@ -51,7 +51,7 @@
             android:layout_marginTop="280dp"
             android:inputType="number"
             android:singleLine="true"
-            android:textColor="@color/olpc_dark_grey" />
+            android:textColor="#07565b" />
 
         <Spinner
             android:id="@+id/spinner"
@@ -68,7 +68,7 @@
             android:layout_marginTop="280dp"
             android:inputType="number"
             android:singleLine="true"
-            android:textColor="@color/olpc_dark_grey" />
+            android:textColor="#07565b" />
 
         <TextView
             android:layout_width="350dp"
@@ -76,7 +76,7 @@
             android:layout_marginLeft="30dp"
             android:layout_marginTop="370dp"
             android:text="@string/warningPairs"
-            android:textColor="@color/olpc_text_grey_color"
+            android:textColor="#07565b"
             android:textSize="18sp" />
 
         <ImageButton
@@ -95,7 +95,7 @@
             android:layout_marginLeft="110dp"
             android:layout_marginTop="200dp"
             android:text="@string/addPair"
-            android:textColor="@android:color/black"
+            android:textColor="#07565b"
             android:textSize="20sp" />
 
         <ImageView
@@ -110,7 +110,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_weight="0.5"
-        android:background="@color/olpc_dark_grey"
+        android:background="#6b9591"
         android:orientation="horizontal" >
 
         <ImageButton
@@ -125,11 +125,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="top|right"
-            android:layout_marginRight="300dp"
+            android:layout_marginRight="275dp"
             android:layout_marginTop="25dp"
             android:text="@string/numberPairs"
             android:textColor="@android:color/white"
-            android:textSize="15sp"
+            android:textSize="18sp"
             android:textStyle="bold" />
 
         <TextView
@@ -137,10 +137,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="top|right"
-            android:layout_marginRight="270dp"
+            android:layout_marginRight="230dp"
             android:layout_marginTop="25dp"
             android:textColor="@android:color/white"
-            android:textSize="15sp"
+            android:textSize="18sp"
             android:textStyle="bold" />
 
         <TextView
