--- a/res/layout/leftmenu.xml
+++ b/res/layout/leftmenu.xml
@@ -4,38 +4,115 @@
     android:layout_height="match_parent"
     android:paddingRight="5dp" >
 
-    <LinearLayout
-        android:layout_width="wrap_content"
+    <FrameLayout
+        android:layout_width="330dp"
         android:layout_height="match_parent"
-        android:background="@+color/olpc_dark_grey"
-        android:orientation="horizontal" >
+        android:background="#07565b"
+        android:orientation="vertical" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top|center"
+            android:layout_marginTop="20dp"
+            android:text="@string/app_name"
+            android:textColor="#f4f1dd"
+            android:textSize="35sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top|center"
+            android:layout_marginRight="70dp"
+            android:layout_marginTop="120dp"
+            android:text="@string/newGame"
+            android:textColor="#f4f1dd"
+            android:textSize="22sp" />
 
         <Button
             android:id="@+id/restart"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_margin="5dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_gravity="top|center"
+            android:layout_marginLeft="70dp"
+            android:layout_marginTop="90dp"
             android:background="@+drawable/restart" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top|center"
+            android:layout_marginRight="70dp"
+            android:layout_marginTop="190dp"
+            android:text="@string/size"
+            android:textColor="#f4f1dd"
+            android:textSize="22sp" />
 
         <Spinner
             android:id="@+id/change_size"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_margin="5dp" />
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_gravity="top|center"
+            android:layout_marginLeft="70dp"
+            android:layout_marginTop="160dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top|center"
+            android:layout_marginRight="70dp"
+            android:layout_marginTop="290dp"
+            android:text="@string/typeGame"
+            android:textColor="#f4f1dd"
+            android:textSize="22sp" />
 
         <Spinner
             android:id="@+id/change_games"
             android:layout_width="wrap_content"
-            android:layout_height="80dp"
-            android:layout_margin="5dp" />
-    </LinearLayout>
+            android:layout_height="70dp"
+            android:layout_gravity="top|center"
+            android:layout_marginLeft="70dp"
+            android:layout_marginTop="260dp" />
 
-    <ImageButton
-        android:id="@+id/settingsActivity"
-        android:layout_width="wrap_content"
-        android:layout_height="80dp"
-        android:layout_alignParentBottom="true"
-        android:layout_margin="5dp"
-        android:background="@drawable/settings" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top|center"
+            android:layout_marginRight="70dp"
+            android:layout_marginTop="390dp"
+            android:text="@string/theme"
+            android:textColor="#f4f1dd"
+            android:textSize="22sp" />
+
+        <Spinner
+            android:id="@+id/change_theme"
+            android:layout_width="wrap_content"
+            android:layout_height="70dp"
+            android:layout_gravity="top|center"
+            android:layout_marginLeft="70dp"
+            android:layout_marginTop="360dp"
+            android:entries="@array/changeTheme"
+            android:prompt="@string/theme" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top|center"
+            android:layout_marginRight="70dp"
+            android:layout_marginTop="490dp"
+            android:text="@string/editor"
+            android:textColor="#f4f1dd"
+            android:textSize="22sp" />
+
+        <ImageButton
+            android:id="@+id/settingsActivity"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_gravity="top|center"
+            android:layout_marginLeft="70dp"
+            android:layout_marginTop="460dp"
+            android:background="@drawable/settings" />
+    </FrameLayout>
 
 </RelativeLayout>
