--- a/res/layout/letters_layout.xml
+++ b/res/layout/letters_layout.xml
@@ -9,7 +9,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_weight="0.5"
-        android:background="@color/light_grey"
+        android:background="#b4d4ad"
         android:orientation="horizontal" >
 
         <TextView
@@ -19,7 +19,7 @@
             android:layout_marginLeft="30dp"
             android:layout_marginTop="30dp"
             android:text="@string/preview"
-            android:textColor="@color/olpc_text_grey_color"
+            android:textColor="#07565b"
             android:textSize="20sp" />
 
         <com.morphoss.xo.memorize.ObjView
@@ -51,7 +51,7 @@
             android:layout_marginTop="280dp"
             android:inputType="text"
             android:singleLine="true"
-            android:textColor="@color/olpc_dark_grey" />
+            android:textColor="#07565b" />
 
         <TextView
             android:layout_width="250dp"
@@ -59,7 +59,7 @@
             android:layout_marginLeft="30dp"
             android:layout_marginTop="360dp"
             android:text="@string/warningPairs"
-            android:textColor="@color/olpc_text_grey_color"
+            android:textColor="#07565b"
             android:textSize="18sp" />
 
         <ImageButton
@@ -94,7 +94,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_weight="0.5"
-        android:background="@color/olpc_dark_grey"
+        android:background="#39747a"
         android:orientation="horizontal" >
 
         <ImageButton
@@ -109,11 +109,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="top|right"
-            android:layout_marginRight="300dp"
+            android:layout_marginRight="270dp"
             android:layout_marginTop="25dp"
             android:text="@string/numberPairs"
             android:textColor="@android:color/white"
-            android:textSize="15sp"
+            android:textSize="18sp"
             android:textStyle="bold" />
 
         <TextView
@@ -121,10 +121,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="top|right"
-            android:layout_marginRight="270dp"
+            android:layout_marginRight="230dp"
             android:layout_marginTop="25dp"
             android:textColor="@android:color/white"
-            android:textSize="15sp"
+            android:textSize="18sp"
             android:textStyle="bold" />
 
         <TextView
