--- a/res/layout/listlayout.xml
+++ b/res/layout/listlayout.xml
@@ -16,7 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="15dp"
-        android:textColor="@color/olpc_text_grey_color"
+        android:textColor="#07565b"
         android:textSize="20sp" />
 
 </LinearLayout>
