--- a/res/layout/settings_layout.xml
+++ b/res/layout/settings_layout.xml
@@ -2,7 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
+    android:background="#f4f1dd"
     android:orientation="vertical" >
 
     <TextView
@@ -11,7 +11,7 @@
         android:layout_gravity="top|center"
         android:layout_marginTop="30dp"
         android:text="@string/settingsTitle"
-        android:textColor="@color/olpc_dark_grey"
+        android:textColor="#07565b"
         android:textSize="40sp"
         android:textStyle="bold" />
 
@@ -29,7 +29,7 @@
         android:layout_marginLeft="180dp"
         android:layout_marginTop="140dp"
         android:text="@string/createGame"
-        android:textColor="@color/olpc_dark_grey"
+        android:textColor="#07565b"
         android:textSize="33sp"
         android:textStyle="italic" />
 
@@ -40,12 +40,12 @@
         android:layout_marginLeft="120dp"
         android:layout_marginTop="230dp"
         android:text="@string/nameGame"
-        android:textColor="@color/olpc_dark_grey"
+        android:textColor="#07565b"
         android:textSize="25sp" />
 
     <EditText
         android:id="@+id/editTxt"
-        android:layout_width="150dp"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:layout_gravity="top|center"
         android:layout_marginLeft="250dp"
@@ -62,7 +62,7 @@
         android:layout_marginLeft="120dp"
         android:layout_marginTop="280dp"
         android:text="@string/typeGame"
-        android:textColor="@color/olpc_dark_grey"
+        android:textColor="#07565b"
         android:textSize="25sp" />
 
     <RadioGroup
@@ -79,21 +79,21 @@
             android:layout_height="wrap_content"
             android:checked="true"
             android:text="@string/radio_addition"
-            android:textColor="@color/olpc_text_grey_color" />
+            android:textColor="#07565b" />
 
         <RadioButton
             android:id="@+id/radioSounds"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/radio_sounds"
-            android:textColor="@color/olpc_text_grey_color" />
+            android:textColor="#07565b" />
 
         <RadioButton
             android:id="@+id/radioLetters"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/radio_letters"
-            android:textColor="@color/olpc_text_grey_color" />
+            android:textColor="#07565b" />
     </RadioGroup>
 
     <Button
@@ -103,9 +103,10 @@
         android:layout_gravity="right|bottom"
         android:layout_marginBottom="40dp"
         android:layout_marginRight="70dp"
-        android:background="@color/olpc_dark_grey"
+        android:background="#07565b"
+        android:padding="10sp"
         android:text="@string/nextGame"
-        android:textColor="@color/olpc_delicate_grey" />
+        android:textColor="#f4f1dd" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -114,7 +115,7 @@
         android:layout_marginBottom="70dp"
         android:layout_marginLeft="70dp"
         android:text="@string/modifyGame"
-        android:textColor="@color/olpc_text_grey_color"
+        android:textColor="#07565b"
         android:textSize="25sp" />
 
     <ListView
