--- a/res/layout/addition_layout.xml
+++ b/res/layout/addition_layout.xml
@@ -164,8 +164,9 @@
 
         <ScrollView
             android:id="@+id/scrollView"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="top|center_horizontal"
             android:layout_marginTop="70dp" >
 
             <LinearLayout
