--- a/res/layout/letters_layout.xml
+++ b/res/layout/letters_layout.xml
@@ -154,8 +154,9 @@
 
             <LinearLayout
                 android:id="@+id/newItems"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="top|center_horizontal"
                 android:orientation="vertical" >
             </LinearLayout>
         </ScrollView>
