--- a/res/layout/settings_layout.xml
+++ b/res/layout/settings_layout.xml
@@ -17,7 +17,7 @@
 
     <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="440dp"
+        android:layout_height="460dp"
         android:layout_gravity="bottom|center"
         android:layout_marginRight="60dp"
         android:src="@drawable/monkey_settings" />
@@ -70,7 +70,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="top|center"
-        android:layout_marginLeft="220dp"
+        android:layout_marginLeft="260dp"
         android:layout_marginTop="280dp" >
 
         <RadioButton
@@ -112,8 +112,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_marginBottom="70dp"
-        android:layout_marginLeft="70dp"
+        android:layout_marginBottom="80dp"
+        android:layout_marginLeft="90dp"
         android:text="@string/modifyGame"
         android:textColor="#07565b"
         android:textSize="25sp" />
@@ -122,8 +122,7 @@
         android:id="@+id/listview"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="top"
-        android:layout_marginLeft="90dp"
-        android:layout_marginTop="240dp" />
+        android:layout_gravity="center"
+        android:layout_marginRight="270dp" />
 
 </FrameLayout>
