--- a/res/layout/leftmenu.xml
+++ b/res/layout/leftmenu.xml
@@ -14,105 +14,63 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="top|center"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="40dp"
             android:text="@string/app_name"
             android:textColor="#f4f1dd"
-            android:textSize="35sp"
+            android:textSize="45sp"
             android:textStyle="bold" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top|center"
-            android:layout_marginRight="70dp"
-            android:layout_marginTop="120dp"
-            android:text="@string/newGame"
-            android:textColor="#f4f1dd"
-            android:textSize="22sp" />
 
         <Button
             android:id="@+id/restart"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_gravity="top|center"
             android:layout_marginLeft="70dp"
-            android:layout_marginTop="90dp"
+            android:layout_marginTop="150dp"
             android:background="@+drawable/restart" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top|center"
-            android:layout_marginRight="70dp"
-            android:layout_marginTop="200dp"
-            android:text="@string/size"
-            android:textColor="#f4f1dd"
-            android:textSize="22sp" />
-
-        <Spinner
-            android:id="@+id/change_size"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_gravity="top|center"
-            android:layout_marginLeft="70dp"
-            android:layout_marginTop="170dp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top|center"
-            android:layout_marginRight="70dp"
-            android:layout_marginTop="290dp"
-            android:text="@string/typeGame"
-            android:textColor="#f4f1dd"
-            android:textSize="22sp" />
-
-        <Spinner
-            android:id="@+id/change_games"
-            android:layout_width="wrap_content"
-            android:layout_height="70dp"
-            android:layout_gravity="top|center"
-            android:layout_marginLeft="70dp"
-            android:layout_marginTop="260dp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top|center"
-            android:layout_marginRight="70dp"
-            android:layout_marginTop="380dp"
-            android:text="@string/theme"
-            android:textColor="#f4f1dd"
-            android:textSize="22sp" />
-
-        <Spinner
-            android:id="@+id/change_theme"
-            android:layout_width="wrap_content"
-            android:layout_height="70dp"
-            android:layout_gravity="top|center"
-            android:layout_marginLeft="70dp"
-            android:layout_marginTop="350dp"
-            android:entries="@array/changeTheme"
-            android:prompt="@string/theme" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top|center"
-            android:layout_marginRight="70dp"
-            android:layout_marginTop="480dp"
-            android:text="@string/editor"
-            android:textColor="#f4f1dd"
-            android:textSize="22sp" />
 
         <ImageButton
             android:id="@+id/settingsActivity"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="top|center"
+            android:layout_marginRight="70dp"
+            android:layout_marginTop="150dp"
+            android:background="@drawable/settings" />
+
+        <Spinner
+            android:id="@+id/change_size"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_gravity="top|center"
             android:layout_marginLeft="70dp"
-            android:layout_marginTop="450dp"
-            android:background="@drawable/settings" />
+            android:layout_marginTop="270dp" />
+
+        <Spinner
+            android:id="@+id/change_games"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="top|center"
+            android:layout_marginRight="70dp"
+            android:layout_marginTop="270dp" />
+
+        <Spinner
+            android:id="@+id/change_theme"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="top|center"
+            android:layout_marginLeft="70dp"
+            android:layout_marginTop="390dp"
+            android:entries="@array/changeTheme" />
+
+        <ImageButton
+            android:id="@+id/helpActivity"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="top|center"
+            android:layout_marginRight="70dp"
+            android:layout_marginTop="390dp"
+            android:background="@drawable/help" />
     </FrameLayout>
 
 </RelativeLayout>
