--- a/res/layout/settings_layout.xml
+++ b/res/layout/settings_layout.xml
@@ -50,6 +50,7 @@
         android:layout_gravity="top|center"
         android:layout_marginLeft="250dp"
         android:layout_marginTop="230dp"
+        android:clickable="true"
         android:hint="@string/hintName"
         android:inputType="text"
         android:singleLine="true"
