--- a/res/layout-large/addition_layout.xml
+++ b/res/layout-large/addition_layout.xml
@@ -17,76 +17,92 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="30dp"
             android:text="@string/preview"
             android:textColor="#07565b"
-            android:textSize="14sp" />
+            android:textSize="20sp" />
 
         <com.morphoss.xo.memorize.ObjView
             android:id="@+id/obj_view_pair1"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="60dp" />
+            android:layout_width="130dp"
+            android:layout_height="130dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="90dp" />
 
         <com.morphoss.xo.memorize.ObjView
             android:id="@+id/obj_view_pair2"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_marginLeft="110dp"
-            android:layout_marginTop="60dp" />
+            android:layout_width="130dp"
+            android:layout_height="130dp"
+            android:layout_marginLeft="200dp"
+            android:layout_marginTop="90dp" />
 
         <ImageView
-            android:layout_width="80dp"
-            android:layout_height="62dp"
-            android:layout_marginLeft="200dp"
-            android:layout_marginTop="75dp"
-            android:src="@drawable/letter" />
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="370dp"
+            android:layout_marginTop="50dp"
+            android:src="@drawable/math" />
 
         <EditText
-            android:id="@+id/editTxtLetter"
-            android:layout_width="80dp"
+            android:id="@+id/editTxtAddition"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="170dp"
-            android:inputType="text"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="280dp"
+            android:inputType="number"
+            android:singleLine="true"
+            android:textColor="#07565b" />
+
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="160dp"
+            android:layout_marginTop="260dp" />
+
+        <EditText
+            android:id="@+id/editTxtAddition2"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="240dp"
+            android:layout_marginTop="280dp"
+            android:inputType="number"
             android:singleLine="true"
             android:textColor="#07565b" />
 
         <TextView
-            android:layout_width="150dp"
+            android:layout_width="350dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="240dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="370dp"
             android:text="@string/warningPairs"
             android:textColor="#07565b"
-            android:textSize="12sp" />
+            android:textSize="18sp" />
 
         <ImageButton
             android:id="@+id/addItems"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="140dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="200dp"
             android:background="@drawable/pair_add" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="80dp"
-            android:layout_marginTop="140dp"
+            android:layout_marginLeft="110dp"
+            android:layout_marginTop="200dp"
             android:text="@string/addPair"
             android:textColor="#07565b"
-            android:textSize="14sp" />
+            android:textSize="20sp" />
 
         <ImageView
-            android:layout_width="174dp"
-            android:layout_height="153dp"
+            android:layout_width="280dp"
+            android:layout_height="150dp"
             android:layout_gravity="bottom|right"
-            android:layout_margin="5dp"
-            android:src="@drawable/monkey_boat" />
+            android:src="@drawable/monkey_bush" />
     </FrameLayout>
 
     <FrameLayout
@@ -94,13 +110,13 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_weight="0.5"
-        android:background="#39747a"
+        android:background="#6b9591"
         android:orientation="horizontal" >
 
         <ImageButton
             android:id="@+id/saveGame"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_gravity="top|right"
             android:layout_margin="10dp"
             android:background="@drawable/save" />
@@ -109,11 +125,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="top|right"
-            android:layout_marginRight="150dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginRight="275dp"
+            android:layout_marginTop="25dp"
             android:text="@string/numberPairs"
             android:textColor="@android:color/white"
-            android:textSize="12sp"
+            android:textSize="18sp"
             android:textStyle="bold" />
 
         <TextView
@@ -121,42 +137,42 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="top|right"
-            android:layout_marginRight="120dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginRight="230dp"
+            android:layout_marginTop="25dp"
             android:textColor="@android:color/white"
-            android:textSize="12sp"
+            android:textSize="18sp"
             android:textStyle="bold" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="top|right"
-            android:layout_marginRight="60dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginRight="80dp"
+            android:layout_marginTop="25dp"
             android:text="@string/saveGame"
             android:textColor="@android:color/white"
-            android:textSize="12sp"
+            android:textSize="18sp"
             android:textStyle="bold" />
 
         <ImageButton
             android:id="@+id/clearGame"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_gravity="top|left"
             android:layout_margin="10dp"
             android:background="@drawable/edit_clear" />
 
         <ScrollView
             android:id="@+id/scrollView"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="55dp" >
+            android:layout_gravity="top|center_horizontal"
+            android:layout_marginTop="70dp" >
 
             <LinearLayout
                 android:id="@+id/newItems"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="top|center_horizontal"
                 android:orientation="vertical" >
             </LinearLayout>
         </ScrollView>
