--- a/res/layout-large/letters_layout.xml
+++ b/res/layout-large/letters_layout.xml
@@ -17,75 +17,75 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="30dp"
             android:text="@string/preview"
             android:textColor="#07565b"
-            android:textSize="14sp" />
+            android:textSize="20sp" />
 
         <com.morphoss.xo.memorize.ObjView
             android:id="@+id/obj_view_pair1"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="60dp" />
+            android:layout_width="130dp"
+            android:layout_height="130dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="90dp" />
 
         <com.morphoss.xo.memorize.ObjView
             android:id="@+id/obj_view_pair2"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_marginLeft="110dp"
-            android:layout_marginTop="60dp" />
+            android:layout_width="130dp"
+            android:layout_height="130dp"
+            android:layout_marginLeft="200dp"
+            android:layout_marginTop="90dp" />
 
         <ImageView
-            android:layout_width="80dp"
-            android:layout_height="62dp"
-            android:layout_marginLeft="200dp"
-            android:layout_marginTop="75dp"
+            android:layout_width="wrap_content"
+            android:layout_height="90dp"
+            android:layout_marginLeft="300dp"
+            android:layout_marginTop="115dp"
             android:src="@drawable/letter" />
 
         <EditText
             android:id="@+id/editTxtLetter"
-            android:layout_width="80dp"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="170dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="280dp"
             android:inputType="text"
             android:singleLine="true"
             android:textColor="#07565b" />
 
         <TextView
-            android:layout_width="150dp"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="240dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="360dp"
             android:text="@string/warningPairs"
             android:textColor="#07565b"
-            android:textSize="12sp" />
+            android:textSize="18sp" />
 
         <ImageButton
             android:id="@+id/addItems"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="140dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="200dp"
             android:background="@drawable/pair_add" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="80dp"
-            android:layout_marginTop="140dp"
+            android:layout_marginLeft="110dp"
+            android:layout_marginTop="200dp"
             android:text="@string/addPair"
             android:textColor="#07565b"
-            android:textSize="14sp" />
+            android:textSize="20sp" />
 
         <ImageView
-            android:layout_width="174dp"
-            android:layout_height="153dp"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="bottom|right"
-            android:layout_margin="5dp"
+            android:layout_margin="10dp"
             android:src="@drawable/monkey_boat" />
     </FrameLayout>
 
@@ -99,8 +99,8 @@
 
         <ImageButton
             android:id="@+id/saveGame"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_gravity="top|right"
             android:layout_margin="10dp"
             android:background="@drawable/save" />
@@ -109,11 +109,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="top|right"
-            android:layout_marginRight="150dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginRight="270dp"
+            android:layout_marginTop="25dp"
             android:text="@string/numberPairs"
             android:textColor="@android:color/white"
-            android:textSize="12sp"
+            android:textSize="18sp"
             android:textStyle="bold" />
 
         <TextView
@@ -121,27 +121,27 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="top|right"
-            android:layout_marginRight="120dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginRight="230dp"
+            android:layout_marginTop="25dp"
             android:textColor="@android:color/white"
-            android:textSize="12sp"
+            android:textSize="18sp"
             android:textStyle="bold" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="top|right"
-            android:layout_marginRight="60dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginRight="80dp"
+            android:layout_marginTop="25dp"
             android:text="@string/saveGame"
             android:textColor="@android:color/white"
-            android:textSize="12sp"
+            android:textSize="18sp"
             android:textStyle="bold" />
 
         <ImageButton
             android:id="@+id/clearGame"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_gravity="top|left"
             android:layout_margin="10dp"
             android:background="@drawable/edit_clear" />
@@ -150,7 +150,7 @@
             android:id="@+id/scrollView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="55dp" >
+            android:layout_marginTop="70dp" >
 
             <LinearLayout
                 android:id="@+id/newItems"
