--- a/res/layout-large/settings_layout.xml
+++ b/res/layout-large/settings_layout.xml
@@ -12,44 +12,44 @@
         android:layout_marginTop="30dp"
         android:text="@string/settingsTitle"
         android:textColor="#07565b"
-        android:textSize="23sp"
+        android:textSize="40sp"
         android:textStyle="bold" />
 
     <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="250dp"
+        android:layout_height="460dp"
         android:layout_gravity="bottom|center"
-        android:layout_marginRight="30dp"
+        android:layout_marginRight="60dp"
         android:src="@drawable/monkey_settings" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="top|center"
-        android:layout_marginLeft="120dp"
-        android:layout_marginTop="90dp"
+        android:layout_marginLeft="180dp"
+        android:layout_marginTop="140dp"
         android:text="@string/createGame"
         android:textColor="#07565b"
-        android:textSize="18sp"
+        android:textSize="33sp"
         android:textStyle="italic" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="top|center"
-        android:layout_marginLeft="70dp"
-        android:layout_marginTop="140dp"
+        android:layout_marginLeft="120dp"
+        android:layout_marginTop="230dp"
         android:text="@string/nameGame"
         android:textColor="#07565b"
-        android:textSize="14sp" />
+        android:textSize="25sp" />
 
     <EditText
         android:id="@+id/editTxt"
-        android:layout_width="110dp"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:layout_gravity="top|center"
-        android:layout_marginLeft="150dp"
-        android:layout_marginTop="125dp"
+        android:layout_marginLeft="250dp"
+        android:layout_marginTop="230dp"
         android:clickable="true"
         android:hint="@string/hintName"
         android:inputType="text"
@@ -60,19 +60,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="top|center"
-        android:layout_marginLeft="70dp"
-        android:layout_marginTop="170dp"
+        android:layout_marginLeft="120dp"
+        android:layout_marginTop="280dp"
         android:text="@string/typeGame"
         android:textColor="#07565b"
-        android:textSize="14sp" />
+        android:textSize="25sp" />
 
     <RadioGroup
         android:id="@+id/radioType"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="top|center"
-        android:layout_marginLeft="170dp"
-        android:layout_marginTop="165dp" >
+        android:layout_marginLeft="260dp"
+        android:layout_marginTop="280dp" >
 
         <RadioButton
             android:id="@+id/radioAddition"
@@ -80,53 +80,50 @@
             android:layout_height="wrap_content"
             android:checked="true"
             android:text="@string/radio_addition"
-            android:textColor="#07565b"
-            android:textSize="12sp" />
+            android:textColor="#07565b" />
 
         <RadioButton
             android:id="@+id/radioSounds"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/radio_sounds"
-            android:textColor="#07565b"
-            android:textSize="12sp" />
+            android:textColor="#07565b" />
 
         <RadioButton
             android:id="@+id/radioLetters"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/radio_letters"
-            android:textColor="#07565b"
-            android:textSize="12sp" />
+            android:textColor="#07565b" />
     </RadioGroup>
 
     <Button
         android:id="@+id/nextBtn"
         android:layout_width="wrap_content"
-        android:layout_height="26dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="right|bottom"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="40dp"
         android:layout_marginRight="70dp"
         android:background="#07565b"
+        android:padding="10sp"
         android:text="@string/nextGame"
-        android:textColor="#f4f1dd"
-        android:textSize="12sp" />
+        android:textColor="#f4f1dd" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_marginBottom="55dp"
-        android:layout_marginLeft="40dp"
+        android:layout_marginBottom="80dp"
+        android:layout_marginLeft="90dp"
         android:text="@string/modifyGame"
         android:textColor="#07565b"
-        android:textSize="18sp" />
+        android:textSize="25sp" />
 
     <ListView
         android:id="@+id/listview"
-        android:layout_width="170dp"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginRight="170dp" />
+        android:layout_marginRight="270dp" />
 
 </FrameLayout>
