--- a/res/layout/addition_layout.xml
+++ b/res/layout/addition_layout.xml
@@ -17,90 +17,90 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="25dp"
             android:text="@string/preview"
             android:textColor="#07565b"
-            android:textSize="20sp" />
+            android:textSize="14sp" />
 
         <com.morphoss.xo.memorize.ObjView
             android:id="@+id/obj_view_pair1"
-            android:layout_width="130dp"
-            android:layout_height="130dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="90dp" />
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="60dp" />
 
         <com.morphoss.xo.memorize.ObjView
             android:id="@+id/obj_view_pair2"
-            android:layout_width="130dp"
-            android:layout_height="130dp"
-            android:layout_marginLeft="200dp"
-            android:layout_marginTop="90dp" />
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_marginLeft="120dp"
+            android:layout_marginTop="60dp" />
 
         <ImageView
-            android:layout_width="70dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="370dp"
-            android:layout_marginTop="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="90dp"
+            android:layout_marginLeft="200dp"
+            android:layout_marginTop="60dp"
             android:src="@drawable/math" />
 
         <EditText
             android:id="@+id/editTxtAddition"
-            android:layout_width="100dp"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="280dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="170dp"
             android:inputType="number"
             android:singleLine="true"
             android:textColor="#07565b" />
 
         <Spinner
             android:id="@+id/spinner"
-            android:layout_width="70dp"
+            android:layout_width="58dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="160dp"
-            android:layout_marginTop="260dp" />
+            android:layout_marginLeft="120dp"
+            android:layout_marginTop="155dp" />
 
         <EditText
             android:id="@+id/editTxtAddition2"
-            android:layout_width="100dp"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="240dp"
-            android:layout_marginTop="280dp"
+            android:layout_marginLeft="200dp"
+            android:layout_marginTop="170dp"
             android:inputType="number"
             android:singleLine="true"
             android:textColor="#07565b" />
 
         <TextView
-            android:layout_width="350dp"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="370dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="235dp"
             android:text="@string/warningPairs"
             android:textColor="#07565b"
-            android:textSize="18sp" />
+            android:textSize="12sp" />
 
         <ImageButton
             android:id="@+id/addItems"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="40dp"
-            android:layout_marginTop="200dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="140dp"
             android:background="@drawable/pair_add" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="110dp"
-            android:layout_marginTop="200dp"
+            android:layout_marginLeft="80dp"
+            android:layout_marginTop="140dp"
             android:text="@string/addPair"
             android:textColor="#07565b"
-            android:textSize="20sp" />
+            android:textSize="14sp" />
 
         <ImageView
-            android:layout_width="280dp"
-            android:layout_height="150dp"
+            android:layout_width="200dp"
+            android:layout_height="100dp"
             android:layout_gravity="bottom|right"
             android:src="@drawable/monkey_bush" />
     </FrameLayout>
@@ -115,8 +115,8 @@
 
         <ImageButton
             android:id="@+id/saveGame"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_gravity="top|right"
             android:layout_margin="10dp"
             android:background="@drawable/save" />
@@ -125,11 +125,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="top|right"
-            android:layout_marginRight="275dp"
-            android:layout_marginTop="25dp"
+            android:layout_marginRight="150dp"
+            android:layout_marginTop="20dp"
             android:text="@string/numberPairs"
             android:textColor="@android:color/white"
-            android:textSize="18sp"
+            android:textSize="12sp"
             android:textStyle="bold" />
 
         <TextView
@@ -137,27 +137,27 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="top|right"
-            android:layout_marginRight="230dp"
-            android:layout_marginTop="25dp"
+            android:layout_marginRight="120dp"
+            android:layout_marginTop="20dp"
             android:textColor="@android:color/white"
-            android:textSize="18sp"
+            android:textSize="12sp"
             android:textStyle="bold" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="top|right"
-            android:layout_marginRight="80dp"
-            android:layout_marginTop="25dp"
+            android:layout_marginRight="60dp"
+            android:layout_marginTop="20dp"
             android:text="@string/saveGame"
             android:textColor="@android:color/white"
-            android:textSize="18sp"
+            android:textSize="12sp"
             android:textStyle="bold" />
 
         <ImageButton
             android:id="@+id/clearGame"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_gravity="top|left"
             android:layout_margin="10dp"
             android:background="@drawable/edit_clear" />
@@ -167,7 +167,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="top|center_horizontal"
-            android:layout_marginTop="70dp" >
+            android:layout_marginTop="55dp" >
 
             <LinearLayout
                 android:id="@+id/newItems"
