--- a/res/layout/sounds_layout.xml
+++ b/res/layout/sounds_layout.xml
@@ -17,59 +17,59 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="25dp"
             android:text="@string/preview"
             android:textColor="#07565b"
-            android:textSize="20sp" />
+            android:textSize="14sp" />
 
         <com.morphoss.xo.memorize.ObjView
             android:id="@+id/obj_view_pair1"
-            android:layout_width="130dp"
-            android:layout_height="130dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="90dp" />
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="60dp" />
 
         <com.morphoss.xo.memorize.ObjView
             android:id="@+id/obj_view_pair2"
-            android:layout_width="130dp"
-            android:layout_height="130dp"
-            android:layout_marginLeft="200dp"
-            android:layout_marginTop="90dp" />
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_marginLeft="120dp"
+            android:layout_marginTop="60dp" />
 
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="140dp"
-            android:layout_marginLeft="320dp"
-            android:layout_marginTop="85dp"
+            android:layout_height="90dp"
+            android:layout_marginLeft="200dp"
+            android:layout_marginTop="60dp"
             android:src="@drawable/music" />
 
         <TextView
             android:id="@+id/importText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="240dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="170dp"
             android:text="@string/importPictSound"
             android:textColor="#07565b"
-            android:textSize="18sp"
+            android:textSize="14sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/pictureText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="290dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="210dp"
             android:text="@string/aPicture"
             android:textColor="#07565b"
-            android:textSize="16sp" />
+            android:textSize="12sp" />
 
         <ImageButton
             android:id="@+id/addPicture"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_marginLeft="110dp"
-            android:layout_marginTop="270dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="80dp"
+            android:layout_marginTop="195dp"
             android:padding="10dp"
             android:scaleType="centerCrop"
             android:src="@drawable/import_picture" />
@@ -78,55 +78,55 @@
             android:id="@+id/soundText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="190dp"
-            android:layout_marginTop="290dp"
+            android:layout_marginLeft="140dp"
+            android:layout_marginTop="210dp"
             android:text="@string/aSound"
             android:textColor="#07565b"
-            android:textSize="16sp" />
+            android:textSize="12sp" />
 
         <ImageButton
             android:id="@+id/addSound"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_marginLeft="260dp"
-            android:layout_marginTop="270dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="200dp"
+            android:layout_marginTop="195dp"
             android:padding="10dp"
             android:scaleType="centerCrop"
             android:src="@drawable/import_sound" />
 
         <TextView
-            android:layout_width="250dp"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="360dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="250dp"
             android:text="@string/warningPairs"
             android:textColor="#07565b"
-            android:textSize="18sp" />
+            android:textSize="12sp" />
 
         <ImageButton
             android:id="@+id/addItems"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="40dp"
-            android:layout_marginTop="200dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="140dp"
             android:background="@drawable/pair_add" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="110dp"
-            android:layout_marginTop="200dp"
+            android:layout_marginLeft="80dp"
+            android:layout_marginTop="140dp"
             android:text="@string/addPair"
-            android:textColor="@android:color/black"
-            android:textSize="20sp" />
+            android:textColor="#07565b"
+            android:textSize="14sp" />
 
         <ImageView
-            android:layout_width="230dp"
-            android:layout_height="240dp"
+            android:layout_width="172dp"
+            android:layout_height="115dp"
             android:layout_gravity="bottom|right"
-            android:layout_margin="10dp"
+            android:layout_margin="5dp"
             android:src="@drawable/monkey_music" />
     </FrameLayout>
 
@@ -140,8 +140,8 @@
 
         <ImageButton
             android:id="@+id/saveGame"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_gravity="top|right"
             android:layout_margin="10dp"
             android:background="@drawable/save" />
@@ -150,11 +150,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="top|right"
-            android:layout_marginRight="275dp"
-            android:layout_marginTop="25dp"
+            android:layout_marginRight="150dp"
+            android:layout_marginTop="20dp"
             android:text="@string/numberPairs"
             android:textColor="@android:color/white"
-            android:textSize="18sp"
+            android:textSize="12sp"
             android:textStyle="bold" />
 
         <TextView
@@ -162,27 +162,27 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="top|right"
-            android:layout_marginRight="230dp"
-            android:layout_marginTop="25dp"
+            android:layout_marginRight="120dp"
+            android:layout_marginTop="20dp"
             android:textColor="@android:color/white"
-            android:textSize="18sp"
+            android:textSize="12sp"
             android:textStyle="bold" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="top|right"
-            android:layout_marginRight="80dp"
-            android:layout_marginTop="25dp"
+            android:layout_marginRight="60dp"
+            android:layout_marginTop="20dp"
             android:text="@string/saveGame"
             android:textColor="@android:color/white"
-            android:textSize="18sp"
+            android:textSize="12sp"
             android:textStyle="bold" />
 
         <ImageButton
             android:id="@+id/clearGame"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_gravity="top|left"
             android:layout_margin="10dp"
             android:background="@drawable/edit_clear" />
@@ -191,7 +191,7 @@
             android:id="@+id/scrollView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="70dp" >
+            android:layout_marginTop="55dp" >
 
             <LinearLayout
                 android:id="@+id/newItems"
